@@ -18,3 +18,4 @@ add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/example-05-camera-manual-control
 add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/example-06-spatial-buffer" )
 add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/example-07-texture-atlas" )
 add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/example-08-pathfind" )
+add_subdirectory ( "${CMAKE_CURRENT_SOURCE_DIR}/example-09-collisions" )
