@@ -2,4 +2,4 @@
 
 #include <string>
 
-const std::string TEST_DATA_DIR = "C:/Users/doomi/Documents/GitHub/dgm-lib/tests/testdata";
+const std::string TEST_DATA_DIR = "C:/Users/jakub.neruda/Documents/GitHub/dgm-lib/tests/testdata";
